# status-bar

./: Cargo.toml  README.md  flake.nix
src/: main.rs  status_bar.rs
