[package]
name = "status_bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
lazy_static = "1.5.0"
libc = "0.2.153"
nix = "0.28.0"
regex = "1.10.6"
tokio = { version = "1.28.2", features = ["full"] }
x11rb = "0.12.0"
